--- a/public/index.html
+++ b/public/index.html
@@ -2,47 +2,59 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Shivam Kumar | VS Code-style Developer Portfolio</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A modern VS Code-style portfolio by Shivam Kumar showcasing web development, React, Node.js, Laravel, and MERN stack projects."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta
+      name="keywords"
+      content="Shivam Kumar, VS Code portfolio, editor style portfolio, web developer, React developer, MERN stack, Laravel, frontend backend"
+    />
+    <meta name="author" content="Shivam Kumar" />
+    <meta name="theme-color" content="#000000" />
+    <!-- Canonical -->
+    <link rel="canonical" href="https://yourdomain.dev/" />
+    <meta
+      property="og:title"
+      content="Shivam Kumar | VS Code-style Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Explore Shivam Kumar's code editor-style portfolio built using React, showcasing projects, resume, and skills."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.dev/" />
+    <meta property="og:image" content="https://yourdomain.dev/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Shivam Kumar | VS Code-style Developer Portfolio"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore Shivam Kumar's code editor-style developer portfolio built using React."
+    />
+    <meta name="twitter:image" content="https://yourdomain.dev/og-image.png" />
+    <meta name="twitter:creator" content="@shivamkumar9969" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha512-ZDF4Jzcbm8tKTVAI6+0N6t9qF6jXOS+xfD9vyyKcCnEb2kJmLkA9+k1VW9PzvK9QLFaepm5AgP53XVRPHZnU3A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root"></div>   
   </body>
 </html>
